# mkge

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  docker-compose.yml
backend/: Dockerfile  create_test_pdf.py  pyproject.toml  test_gemini.py  test_gemini_pdf.py  test_medical.html  test_pdf.py  wipe_neo4j.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  f1b9b8a9183f_add_audit_logs.py
backend/src/mkge/: config.py  main.py
backend/src/mkge/application/admin/: __init__.py  services.py
backend/src/mkge/application/auth/: services.py
backend/src/mkge/application/documents/: services.py
backend/src/mkge/application/pipeline/: embedder.py  extractor.py  ner.py  service.py  structural.py  verifier.py
backend/src/mkge/application/query/: service.py
backend/src/mkge/domain/: exceptions.py
backend/src/mkge/domain/entities/: chunk.py  document.py  graph.py  user.py
backend/src/mkge/domain/value_objects/: audit.py
backend/src/mkge/infrastructure/: celery_app.py
backend/src/mkge/infrastructure/cache/: redis.py
backend/src/mkge/infrastructure/db/neo4j/: driver.py  graph_repo.py
backend/src/mkge/infrastructure/llm/: llm_generator.py
backend/src/mkge/infrastructure/storage/: local.py
backend/src/mkge/interface/api/: deps.py  errors.py  middleware.py  rate_limit.py
backend/src/mkge/interface/workers/: tasks.py
backend/src/mkge/shared/: logging.py  security.py
backend/tests/unit/: test_auth_service.py  test_document_service.py  test_query_service.py  test_rate_limiter.py  test_security.py
nginx/: nginx.conf
(+94 files in other folders)
