[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkge"
version = "0.1.0"
description = "Medical Knowledge Graph Extraction + GraphRAG"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",

    # Config
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.1.3",

    # DB
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",

    # Neo4j
    "neo4j==5.19.0",

    # Qdrant
    "qdrant-client==1.9.1",

    # Redis + Celery
    "redis==5.0.4",
    "celery==5.3.6",

    # AI
    "google-generativeai==0.7.2",
    "groq==0.9.0",

    # PDF
    "pdfplumber==0.11.0",

    # Utils
    "structlog==24.2.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
